Proxos and TrustICE

--- a/index.html
+++ b/index.html
@@ -491,6 +491,23 @@ Historically, the open source software community rightfully was extremely wary o
 
 	<tr>
 		<td class="col_year">   2006</td>
+		<td class="col_work">   <a href="https://dl.acm.org/doi/10.5555/1298455.1298482">Proxos</a></td>
+		<td class="col_venue">  OSDI</td>
+		<td class="col_domain"> <span class="badge text-bg-success">Virt</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
+		<td class="col_ideas">  Design of a split OS enclave architecture using virtualization. One private/secure OS and one untrusted OS. Designs a language to allow an application to configure what system calls and paths in the filesystem are to be routed to what OS.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-question-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-question-lg"></i></td>
+		<td class="col_legacy"> <span class="badge text-bg-info">Ported</span></td>
+	</tr>
+
+	<tr>
+		<td class="col_year">   2006</td>
 		<td class="col_work">   <a href="https://dl.acm.org/doi/abs/10.1145/1217935.1217951">Nizza</a></td>
 		<td class="col_venue">  EuroSys</td>
 		<td class="col_domain"> <span class="badge text-bg-success">Virt</span></td>
@@ -712,7 +729,7 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
 		<td class="col_legacy"> <i class="bi bi-check-lg"></i></td>
 	</tr>
-	
+
 	<tr>
 		<td class="col_year">   2014</td>
 		<td class="col_work">   <a href="https://www.usenix.org/conference/atc14/technical-sessions/presentation/li_yanlin">MiniBox</a></td>
@@ -763,6 +780,24 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
 		<td class="col_legacy"> <i class="bi bi-x-lg"></i></td>
 	</tr>
+
+	<tr>
+		<td class="col_year">   2015</td>
+		<td class="col_work">   <a href="https://ieeexplore.ieee.org/abstract/document/7266865">TrustICE</a></td>
+		<td class="col_venue">  ICDCS</td>
+		<td class="col_domain"> <span class="badge text-bg-secondary">TrustZone</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
+		<td class="col_ideas">  Simple approach to managing the TZASC on a system where only one Secure world memory range is configurable. Unfortunately, performance scales poorly with many enclaves due to copying.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-x-lg"></i></td>
+	</tr>
+
 
 	<tr>
 		<td class="col_year">   2015</td>
