--- a/index.html
+++ b/index.html
@@ -661,6 +661,22 @@ Historically, the open source software community rightfully was extremely wary o
 	</tr>
 
 
+	<tr>
+		<td class="col_year">   2012</td>
+		<td class="col_work">   <a href="https://www.ics.uci.edu/~gts/paps/smart.pdf">SMART</a></td>
+		<td class="col_venue">  NDSS</td>
+		<td class="col_domain"> <span class="badge text-bg-primary">Hardware</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Generic</span></td>
+		<td class="col_ideas">  Demonstrates very minimal hardware extensions needed in order to establish a root of trust for an enclave. Using a challenge-response protocol, a remote verifier can dynamically attest a region of memory. The key needed create the response must be stored in a special ROM which is only readable by the SMART ROM code in charge of generating a response. Must be paired with other approaches to construct full enclaves.</td>
+		<td class="col_C">      <i class="bi bi-dash-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-dash-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-dash-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_MA">     <span class="badge text-bg-info">Timing</span></td>
+		<td class="col_IO">     <i class="bi bi-dash-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-dash-lg"></i></td>
+	</tr>
 
 	<tr>
 		<td class="col_year">   2013</td>
