--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_venue">  SOSP</td>
 		<td class="col_domain"> <span class="badge" style="background-color: var(--bs-purple);">Software</span></td>
 		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
-		<td class="col_ideas">  Using a nearly-perfectly optimized checksum function, this paper demonstrates how to build a pure software root of trust that can allows a remote dispatcher to detect adversarial modifications by checking the execution time of the checksum. </td>
+		<td class="col_ideas">  Using a nearly-perfectly optimized checksum function, this paper demonstrates how to build a pure software root of trust that allows a remote dispatcher to detect adversarial modifications by checking the execution time of the checksum. </td>
 		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
 		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
 		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
@@ -1094,6 +1094,24 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
 		<td class="col_legacy"> <i class="bi bi-x-lg"></i></td>
 	</tr>
+
+	<tr>
+		<td class="col_year">   2019</td>
+		<td class="col_work">   <a href="https://dl.acm.org/doi/abs/10.1145/3313808.3313810">TEEv</a></td>
+		<td class="col_venue">  VEE</td>
+		<td class="col_domain"> <span class="badge text-bg-secondary">TrustZone</span><span class="badge text-bg-success">Virt</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">VM</span></td>
+		<td class="col_ideas">  Prevents security risk of a vulnerable/malicious secure-world OS. Virtualizes a Secure-world OS without needing virtualization hardware. The Secure-world OS binary is scanned for any privileged instructions like MRS/MSR instructions, and they are replaced with calls into special gates which perform a trap. The S-EL1 page tables are setup for the Secure-world OS to prevent access to any other memory, including other Secure-world OSes or the Normal World. By locking the TLB entries for the gates globally across all ASIDs, the gate can safely swap the page tables from the Secure-world OS to the TEEv hypervisor. A few different IO paradigms are supported.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-question-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <span class="badge text-bg-warning">Divided</span></td>
+		<td class="col_legacy"> <i class="bi bi-dash-lg"></i></td>
+	</tr>
+
 
 	<tr>
 		<td class="col_year">   2020</td>
