--- a/index.html
+++ b/index.html
@@ -471,6 +471,23 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_IO">     <i class="bi bi-question-lg"></i></td>
 		<td class="col_legacy"> <i class="bi bi-check-lg"></i></td>
 	</tr>
+	
+	<tr>
+		<td class="col_year">   2004</td>
+		<td class="col_work">   <a href="https://ieeexplore.ieee.org/abstract/document/1301329">SWATT</a></td>
+		<td class="col_venue">  IEEE S&amp;P</td>
+		<td class="col_domain"> <span class="badge" style="background-color: var(--bs-purple);">Software</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
+		<td class="col_ideas">  Using a nearly perfectly optimized memory-content verification procedure, which pseudo-randomly traverses memory can computes the checksum of memory many times, a remote party can attest that a small embedded device's code has not been modified. Any changes to the function would be detectable due to the extra time it would cause to the computation.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-question-lg"></i></td>
+	</tr>
 
 	<tr>
 		<td class="col_year">   2005</td>
@@ -478,7 +495,7 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_venue">  SOSP</td>
 		<td class="col_domain"> <span class="badge" style="background-color: var(--bs-purple);">Software</span></td>
 		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
-		<td class="col_ideas">  Using a nearly-perfectly optimized checksum function, this paper demonstrates how to build a pure software root of trust that allows a remote dispatcher to detect adversarial modifications by checking the execution time of the checksum. </td>
+		<td class="col_ideas">  Using a nearly perfectly optimized checksum function, this paper demonstrates how to build a pure software root of trust that allows a remote dispatcher to detect adversarial modifications by checking the execution time of the checksum. </td>
 		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
 		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
 		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
@@ -1045,7 +1062,7 @@ Historically, the open source software community rightfully was extremely wary o
 
 	<tr>
 		<td class="col_year">   2018</td>
-		<td class="col_work">   <a href="">RT-Trust</a></td>
+		<td class="col_work">   <a href="https://dl.acm.org/doi/abs/10.1145/3278122.3278137">RT-Trust</a></td>
 		<td class="col_venue">  GPCE</td>
 		<td class="col_domain"> <span class="badge text-bg-secondary">TrustZone</span></td>
 		<td class="col_target"> <span class="badge text-bg-dark">Segment</span></td>
@@ -1215,6 +1232,8 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
 		<td class="col_legacy"> <i class="bi bi-check-lg"></i></td>
 	</tr>
+
+	
 
 <!--
 	<tr>
