--- a/index.html
+++ b/index.html
@@ -1077,6 +1077,25 @@ Historically, the open source software community rightfully was extremely wary o
 		<td class="col_legacy"> <span class="badge text-bg-info">Refactored</span></td>
 	</tr>
 
+
+	<tr>
+		<td class="col_year">   2018</td>
+		<td class="col_work">   <a href="https://www.usenix.org/conference/osdi18/presentation/volos">Graviton</a></td>
+		<td class="col_venue">  OSDI</td>
+		<td class="col_domain"> <span class="badge text-bg-primary">Hardware</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">GPU Context</span></td>
+		<td class="col_ideas">  Presents an architecture for enclaves on a GPU with minimal hardware extensions. Commands for setting up GPU kernels are encrypted and routed through the command processor instead of allowing arbitrary CPU modification of GPU page tables over MMIO. The GPU is extended to support a burned-in private attestation key for creating secure communication channels, and it is updated to support protected and hidden on-chip memory.</td>
+		<td class="col_C">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <span class="badge text-bg-primary">ME</span></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_P">      <span class="badge text-bg-dark">GPU</span></td>
+		<td class="col_legacy"> <i class="bi bi-x-lg"></i></td>
+	</tr>
+
+
 	<tr>
 		<td class="col_year">   2019</td>
 		<td class="col_work">   <a href="https://dl.acm.org/doi/10.1145/3319535.3363205">SecTEE</a></td>
