--- a/index.html
+++ b/index.html
@@ -1314,6 +1314,24 @@ Historically, the open source software community rightfully was extremely wary o
 
 	<tr>
 		<td class="col_year">   2022</td>
+		<td class="col_work">   <a href="https://www.usenix.org/conference/usenixsecurity22/presentation/aliaj">GAROTA</a></td>
+		<td class="col_venue">  Usenix Security</td>
+		<td class="col_domain"> <span class="badge text-bg-primary">Hardware</span></td>
+		<td class="col_target"> <span class="badge text-bg-dark">Process</span></td>
+		<td class="col_ideas">  Designs and formally verifies a system allowing interrupts to be configured only by trusted software. The hardware is configured to use a PC-based memory integrity scheme, i.e. only writes from the trusted software address range can update the protected memory. Interrupt configurations are also only allowed by trusted software. Availability is supported by configuring a interrupt to launch an interrupt handler in the protected memory. Formal verification is done using model checking with Linear Temporal Logic (LTL) specifications, Verilog and RTL hardware designs are converted and checked against the LTL specs.</td>
+		<td class="col_C">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_I">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_A">      <i class="bi bi-check-lg"></i></td>
+		<td class="col_RA">     <i class="bi bi-check-lg"></i></td>
+		<td class="col_P">      <i class="bi bi-x-lg"></i></td>
+		<td class="col_MA">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_IO">     <i class="bi bi-x-lg"></i></td>
+		<td class="col_legacy"> <i class="bi bi-x-lg"></i></td>
+	</tr>
+
+
+	<tr>
+		<td class="col_year">   2022</td>
 		<td class="col_work">   <a href="https://ieeexplore.ieee.org/abstract/document/9833604">RT-TEE</a></td>
 		<td class="col_venue">  IEEE S&amp;P</td>
 		<td class="col_domain"> <span class="badge text-bg-secondary">TrustZone</span></td>
